Bug 69009. Don't look for duplicates when reading in bookmarks. r=ben, sr=alecf.