xpfe/components/bookmarks/src/nsBookmarksService.cpp
@@ -1203,16 +1203,10 @@ BookmarkParser::ParseBookmarkInfo(BookmarkField *fields, PRBool isBookmarkFlag,
             }
         }
 
-	// prevent duplicates
-	PRInt32	aIndex;
-	if (NS_SUCCEEDED(aContainer->IndexOf(bookmark, &aIndex)) &&
-		(aIndex < 0))
-	{
-		// The last thing we do is add the bookmark to the container.
-		// This ensures the minimal amount of reflow.
-		rv = aContainer->AppendElement(bookmark);
-		NS_ASSERTION(NS_SUCCEEDED(rv), "unable to add bookmark to container");
-	}
+	// The last thing we do is add the bookmark to the container.
+	// This ensures the minimal amount of reflow.
+	rv = aContainer->AppendElement(bookmark);
+	NS_ASSERTION(NS_SUCCEEDED(rv), "unable to add bookmark to container");
     }
 
     // free up any allocated data in field table AFTER processing
